Update readme, scripts, gitignorem .env examples and E2B template ID

--- a/guides/openai-assistant-js/.env.example
+++ b/guides/openai-assistant-js/.env.example
@@ -4,6 +4,6 @@ E2B_API_KEY=
 # Get the OpenAI API key at https://platform.openai.com
 OPENAI_API_KEY=
 
-# OpenAI assistant ID. You can get it by running `npm run create-ai-assistant` and copying the ID from the output.
+# OpenAI assistant ID. You can get it by running `poetry run create-ai-assistant` and copying the ID from the output.
 # If you already created an assistant, you can get ID by visiting https://platform.openai.com/assistants
 AI_ASSISTANT_ID=
