--- a/guides/openai-assistant-js/package.json
+++ b/guides/openai-assistant-js/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@e2b/sdk": "^0.10.0-rc.1",
+    "dotenv": "^16.3.1",
     "openai": "^4.18.0"
   },
   "devDependencies": {
