--- a/guides/openai-assistant-js/package.json
+++ b/guides/openai-assistant-js/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@e2b/sdk": "^0.10.0-rc.1",
+    "@e2b/sdk": "^0.11.0",
     "dotenv": "^16.3.1",
     "openai": "^4.18.0"
   },
