--- a/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@e2b/sdk": "^0.11.13",
+    "@e2b/sdk": "^0.11.16",
+    "@mistralai/mistralai": "^0.0.7",
     "@vercel/kv": "^1.0.1",
+    "ai": "^2.2.29",
     "htmlparser2": "^9.0.0",
     "marked": "^11.1.0",
     "next": "14.0.4",
