--- a/guides/ai-github-developer-py/.env.example
+++ b/guides/ai-github-developer-py/.env.example
@@ -7,3 +7,11 @@ OPENAI_API_KEY=
 # OpenAI assistant ID. You can get it by running `npm run create-ai-assistant` and copying the ID from the output.
 # If you already created an assistant, you can get ID by visiting https://platform.openai.com/assistants
 AI_ASSISTANT_ID=
+
+# Provide GitHub token with following permissions:
+# - read:org
+# - read:project
+# - repo
+#
+# Find or create your token at https://github.com/settings/tokens
+GITHUB_TOKEN=
