--- a/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@e2b/sdk": "^0.11.16",
+    "@e2b/sdk": "^0.11.17",
     "@mistralai/mistralai": "^0.0.7",
     "@vercel/kv": "^1.0.1",
-    "ai": "^2.2.29",
+    "ai": "^2.2.31",
+    "clsx": "^2.1.0",
+    "highlight.js": "^11.9.0",
     "htmlparser2": "^9.0.0",
-    "marked": "^11.1.0",
-    "next": "14.0.4",
+    "marked": "^11.1.1",
+    "marked-highlight": "^2.1.0",
+    "next": "^14.0.4",
+    "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18"
   },
