--- a/templates/mixtral-8x7b-code-interpreter-nextjs/.env.example
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/.env.example
@@ -1,9 +1,3 @@
 E2B_API_KEY=""
 
-PPLX_API_KEY=""
-
-# Vercel
-KV_REST_API_READ_ONLY_TOKEN=""
-KV_REST_API_TOKEN=""
-KV_REST_API_URL=""
-KV_URL=""
+OPENAI_API_KEY=""
