--- a/templates/e2b-llama-index/backend/pyproject.toml
+++ b/templates/e2b-llama-index/backend/pyproject.toml
@@ -13,6 +13,8 @@ llama-index = "^0.9.19"
 pypdf = "^3.17.0"
 python-dotenv = "^1.0.0"
 pymongo = "^4.6.1"
+websockets = "^12.0"
+e2b = "^0.13.15"
 
 [tool.poetry.dependencies.uvicorn]
 extras = [ "standard" ]
