--- a/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/package.json
@@ -11,19 +11,28 @@
   "dependencies": {
     "@e2b/sdk": "^0.11.17",
     "@mistralai/mistralai": "^0.0.7",
+    "@supabase/supabase-js": "^2.39.2",
     "@vercel/kv": "^1.0.1",
     "ai": "^2.2.31",
     "clsx": "^2.1.0",
+    "entities": "^4.5.0",
     "highlight.js": "^11.9.0",
     "htmlparser2": "^9.0.0",
+    "lucide-react": "^0.309.0",
     "marked": "^11.1.1",
     "marked-highlight": "^2.1.0",
+    "md5": "^2.3.0",
     "next": "^14.0.4",
     "openai": "^4.24.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "usehooks-ts": "^2.9.2"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
