--- a/templates/e2b-llama-index/backend/pyproject.toml
+++ b/templates/e2b-llama-index/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [tool]
 [tool.poetry]
-name = "app"
+name = "e2b-lamma-index"
 version = "0.1.0"
 description = ""
 authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
@@ -8,17 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11,<3.12"
-fastapi = "^0.104.1"
 llama-index = "^0.9.19"
-pypdf = "^3.17.0"
 python-dotenv = "^1.0.0"
-pymongo = "^4.6.1"
 e2b = "^0.13.15"
 supabase = "^2.3.3"
-
-[tool.poetry.dependencies.uvicorn]
-extras = [ "standard" ]
-version = "^0.23.2"
 
 [build-system]
 requires = [ "poetry-core" ]
