Switch to FastAPI and streaming

--- a/templates/e2b-llama-index/backend/Dockerfile
+++ b/templates/e2b-llama-index/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM public.ecr.aws/lambda/python:3.11
+FROM public.ecr.aws/docker/library/python:3.11.0-slim-bullseye
+COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.7.2 /lambda-adapter /opt/extensions/lambda-adapter
 
 ENV POETRY_VERSION=1.5.1
 
@@ -11,5 +12,6 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --no-dev --no-interaction --no-ansi
 
 COPY . .
+ENV PORT=8080
 
-CMD ["main.handler"]
+CMD ["python", "main.py"]
