--- a/templates/e2b-llama-index/backend/pyproject.toml
+++ b/templates/e2b-llama-index/backend/pyproject.toml
@@ -12,6 +12,8 @@ llama-index = "^0.9.19"
 python-dotenv = "^1.0.0"
 e2b = "^0.13.15"
 supabase = "^2.3.3"
+fastapi = {extras = ["uvicorn"], version = "^0.109.0"}
+uvicorn = "^0.25.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
