--- a/templates/e2b-llama-index/e2b-template/requirements.txt
+++ b/templates/e2b-llama-index/e2b-template/requirements.txt
@@ -1,1 +1,30 @@
 supabase>=2.3.3
+pandas
+opencv-python
+imageio
+scikit-learn
+spacy
+bokeh
+pytest
+aiohttp
+python-docx
+nltk
+textblob
+beautifulsoup4
+seaborn
+plotly
+tornado
+matplotlib
+xarray
+librosa
+gensim
+soundfile
+pytz
+requests
+scikit-image
+xlrd
+scipy
+numpy
+openpyxl
+joblib
+urllib3
