--- a/templates/mixtral-8x7b-code-interpreter-nextjs/.env.example
+++ b/templates/mixtral-8x7b-code-interpreter-nextjs/.env.example
@@ -1,6 +1,15 @@
 E2B_API_KEY=""
 
-PPLX_API_KEY=""
+# PPLX_API_KEY=""
+# MISTRAL_API_KEY=""
+FIREWORKS_API_KEY=""
+
+# Supabase
+SUPABASE_URL=""
+SUPABASE_KEY=""
+
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_KEY=""
 
 # Vercel
 KV_REST_API_READ_ONLY_TOKEN=""
