--- a/examples/langchain-python/pyproject.toml
+++ b/examples/langchain-python/pyproject.toml
@@ -12,6 +12,7 @@ langchain = "^0.1.16"
 python-dotenv = "^1.0.1"
 langchain-groq = "^0.1.3"
 langchainhub = "^0.1.15"
+langchain-openai = "^0.1.3"
 
 
 [build-system]
