--- a/examples/langgraph-python/pyproject.toml
+++ b/examples/langgraph-python/pyproject.toml
@@ -7,9 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-e2b = "^0.15.0"
 langgraph = "^0.0.39"
-
+e2b-code-interpreter = "^0.0.3"
+langchain = "^0.1.16"
+python-dotenv = "^1.0.1"
+langchain-groq = "^0.1.3"
+langchainhub = "^0.1.15"
+langchain-openai = "^0.1.3"
 
 [build-system]
 requires = ["poetry-core"]
