--- a/examples/langgraph-python/.env.template
+++ b/examples/langgraph-python/.env.template
@@ -1,2 +1,5 @@
-E2B_API_KEY=
-OPENAI_API_KEY=
+# TODO: Get your E2B API key from https://e2b.dev/docs
+E2B_API_KEY=""
+
+# TODO: Get your OpenAI API key from https://platform.openai.com
+OPENAI_API_KEY=""
