--- a/examples/llama-3-code-interpreter-js/package.json
+++ b/examples/llama-3-code-interpreter-js/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@e2b/code-interpreter": "^0.0.4",
+    "dotenv": "^16.4.5",
     "groq-sdk": "^0.3.3"
   },
   "devDependencies": {
@@ -14,7 +15,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-config-next": "13.4.12",
-    "typescript": "5.1.3",
-    "tsx": "^4.9.3"
+    "tsx": "^4.9.3",
+    "typescript": "5.1.3"
   }
 }
