--- a/examples/scrap-and-analyze-airbnb-data-with-firecrawl/package.json
+++ b/examples/scrap-and-analyze-airbnb-data-with-firecrawl/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "prettier": "3.2.5",
     "tsx": "^4.7.3",
     "typescript": "^5.4.5"
   },
