Add action group for agents

--- a/examples/amazon-bedrock-code-interpreter/package.json
+++ b/examples/amazon-bedrock-code-interpreter/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-bedrock-agent": "^3.583.0",
         "@aws-sdk/client-bedrock-runtime": "^3.577.0",
         "@aws-sdk/client-s3": "^3.577.0"
     }
