Update bedrock example

--- a/examples/amazon-bedrock-code-interpreter/package.json
+++ b/examples/amazon-bedrock-code-interpreter/package.json
@@ -1,18 +1,21 @@
 {
-    "name": "claude",
-    "version": "1.0.0",
-    "description": "This is an example of running LLM-generated code tasks in a secure and isolated cloud environment using the E2B Code Interpreter SDK.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "tsx app.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@aws-sdk/client-bedrock-agent": "^3.583.0",
-        "@aws-sdk/client-bedrock-runtime": "^3.577.0",
-        "@aws-sdk/client-s3": "^3.577.0"
-    }
+  "name": "claude",
+  "version": "1.0.0",
+  "description": "This is an example of running LLM-generated code tasks in a secure and isolated cloud environment using the E2B Code Interpreter SDK.",
+  "main": "app.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx app.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-bedrock": "^3.583.0",
+    "@aws-sdk/client-bedrock-agent": "^3.583.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.583.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.577.0",
+    "@aws-sdk/client-iam": "^3.583.0",
+    "@aws-sdk/client-s3": "^3.577.0"
+  }
 }
