--- a/examples/codestral-code-interpreter-ts/package.json
+++ b/examples/codestral-code-interpreter-ts/package.json
@@ -18,7 +18,6 @@
     "dependencies": {
         "@e2b/code-interpreter": "^0.0.5",
         "@mistralai/mistralai": "^0.4.0",
-        "dotenv": "^16.4.5",
-        "openai": "^4.46.1"
+        "dotenv": "^16.4.5"
     }
 }
