--- a/examples/codestral-code-interpreter-js/package.json
+++ b/examples/codestral-code-interpreter-js/package.json
@@ -11,9 +11,11 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^20.12.11",
+        "globals": "^15.3.0",
         "ts-node": "^10.9.2",
         "tsx": "^4.9.3",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^7.12.0"
     },
     "dependencies": {
         "@e2b/code-interpreter": "^0.0.5",
