--- a/examples/langchain-python/pyproject.toml
+++ b/examples/langchain-python/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 langchain-groq = "^0.1.3"
 langchainhub = "^0.1.15"
 langchain-openai = "^0.1.3"
+pydantic = "^2.9.2"
 
 [build-system]
 requires = ["poetry-core"]
