--- a/examples/crewai-python/pyproject.toml
+++ b/examples/crewai-python/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "langchain_e2b_python"
+name = "crewai_e2b_python"
 version = "0.1.0"
 description = "Example project for showcasing E2B code interpreter with LangChain"
 authors = ["Vasek Mlejnsky <vasek@e2b.dev>"]
@@ -22,4 +22,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "langchain_e2b_python.main:main"
+start = "crewai_e2b_python.main:main"
