Add schema to CodeInterpreterTool and improve comments

--- a/examples/crewai-python/pyproject.toml
+++ b/examples/crewai-python/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 
 crewai = "^0.61.0"
 crewai-tools = "^0.12.1"
+pydantic = "^2.9.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
