--- a/examples/gpt-4o-code-interpreter-js/package.json
+++ b/examples/gpt-4o-code-interpreter-js/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@e2b/code-interpreter": "^0.0.5",
+    "@e2b/code-interpreter": "^0.0.9-beta.61",
     "dotenv": "^16.4.5",
     "openai": "^4.46.1"
   }
