--- a/examples/nextjs-code-interpreter/package.json
+++ b/examples/nextjs-code-interpreter/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.9",
-    "@e2b/code-interpreter": "^0.0.4",
+    "@e2b/code-interpreter": "^0.0.9-beta.61",
     "ai": "^3.1.1",
     "next": "^14.2.3",
     "openai": "^4.40.1"
