--- a/examples/langgraph-python/pyproject.toml
+++ b/examples/langgraph-python/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-langgraph = "^0.0.39"
-e2b-code-interpreter = "^0.0.3"
-langchain = "^0.1.16"
+langgraph = "0.2.32"
+e2b-code-interpreter = "0.0.11b36"
+langchain = "0.3.1"
 python-dotenv = "^1.0.1"
-langchain-groq = "^0.1.3"
-langchainhub = "^0.1.15"
-langchain-openai = "^0.1.3"
+langchain-groq = "0.2.0"
+langchainhub = "0.1.21"
+langchain-openai = "0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
