--- a/examples/hello-world-js/package.json
+++ b/examples/hello-world-js/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.16.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.7.3",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.28.0",
-    "@e2b/code-interpreter": "^0.0.2",
+    "@anthropic-ai/sdk": "^0.20.7",
+    "@e2b/code-interpreter": "^0.0.9-beta.61",
     "dotenv": "^16.4.5"
   }
 }
