--- a/examples/codestral-code-interpreter-js/package.json
+++ b/examples/codestral-code-interpreter-js/package.json
@@ -18,7 +18,7 @@
         "typescript-eslint": "^7.12.0"
     },
     "dependencies": {
-        "@e2b/code-interpreter": "^0.0.9-beta.61",
+        "@e2b/code-interpreter": "^1.0.1",
         "@mistralai/mistralai": "^0.4.0",
         "dotenv": "^16.4.5"
     }
