--- a/examples/scrape-and-analyze-airbnb-data-with-firecrawl/package.json
+++ b/examples/scrape-and-analyze-airbnb-data-with-firecrawl/package.json
@@ -17,7 +17,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@e2b/code-interpreter": "^0.0.9-beta.61",
+    "@e2b/code-interpreter": "^1.0.1",
     "@anthropic-ai/sdk": "^0.28.0",
     "@mendable/firecrawl-js": "^0.0.21",
     "buffer": "^6.0.3",
