Fix Markdown output path

--- a/.github/workflows/update-tests-md.yml
+++ b/.github/workflows/update-tests-md.yml
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: test-results-md
-        path: ./Tests.md
+        path: ./tests/Tests.md
