--- a/examples/agentkit-coding-agent/package.json
+++ b/examples/agentkit-coding-agent/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@e2b/code-interpreter": "^1.0.4",
     "@inngest/agent-kit": "^0.3.0",
+    "inngest": "3.31.10",
     "dotenv": "^16.4.7",
     "nodemon": "^3.0.0",
     "tsx": "^4.7.0",
