--- a/examples/playwright-in-e2b/package.json
+++ b/examples/playwright-in-e2b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsx app.ts",
     "e2b:build:dev": "npx tsx template/build.dev.ts",
-    "e2b:build:prod": "npx tsx template/deploy.dev.ts"
+    "e2b:build:prod": "npx tsx template/build.prod.ts"
   },
   "author": "",
   "license": "ISC",
