fix browserbase docs link

--- a/examples/mcp-browserbase-js/env.template
+++ b/examples/mcp-browserbase-js/env.template
@@ -3,7 +3,7 @@
 # E2B API key - get from https://e2b.dev/docs/api-key
 E2B_API_KEY=
 
-# Browserbase API key - get from https://browserbase.com/docs
+# Browserbase API key - get from https://browserbase.com
 BROWSERBASE_API_KEY=
 
 # Gemini API key for Browserbase - get from https://ai.google.dev/
