--- a/examples/mcp-research-agent-js/package.json
+++ b/examples/mcp-research-agent-js/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": ["e2b", "mcp", "openai", "agent", "research", "arxiv", "duckduckgo"],
   "author": "Foundry Labs",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.16.6",
     "tsx": "^4.7.3",
