--- a/examples/mcp-browserbase-js/env.template
+++ b/examples/mcp-browserbase-js/env.template
@@ -1,16 +1,7 @@
 # Environment variables for Browserbase MCP example
 
-# E2B API key - get from https://e2b.dev/docs/api-key
-E2B_API_KEY=
-
-# Browserbase API key - get from https://browserbase.com
-BROWSERBASE_API_KEY=
-
-# Gemini API key for Browserbase - get from https://ai.google.dev/
-GEMINI_API_KEY=
-
-# Browserbase project ID - get from your Browserbase dashboard
-BROWSERBASE_PROJECT_ID=
-
-# OpenAI API key for agents - get from https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+E2B_API_KEY=your_e2b_api_key
+BROWSERBASE_API_KEY=your_browserbase_api_key
+BROWSERBASE_PROJECT_ID=your_browserbase_project_id
+GEMINI_API_KEY=your_gemini_api_key
+OPENAI_API_KEY=your_openai_api_key
