--- a/examples/mcp-client-js/env.template
+++ b/examples/mcp-client-js/env.template
@@ -1,3 +1,3 @@
-# E2B API Key
-# Get your API key from: https://e2b.dev/docs/getting-started/api-key
-E2B_API_KEY=e2b_your_api_key_here
+# Environment variables for MCP Client example
+
+E2B_API_KEY=your_e2b_api_key
