--- a/examples/mcp-groq-exa-js/env.template
+++ b/examples/mcp-groq-exa-js/env.template
@@ -1,10 +1,5 @@
 # Environment variables for Groq Exa MCP example
 
-# E2B API key - get from https://e2b.dev/docs/api-key
-E2B_API_KEY=
-
-# Groq API key - get from https://console.groq.com/keys
-GROQ_API_KEY=
-
-# Exa API key - get from https://dashboard.exa.ai/
-EXA_API_KEY=
+E2B_API_KEY=your_e2b_api_key
+GROQ_API_KEY=your_groq_api_key
+EXA_API_KEY=your_exa_api_key
