--- a/examples/mcp-research-agent-js/env.template
+++ b/examples/mcp-research-agent-js/env.template
@@ -1,7 +1,4 @@
-# E2B API Key
-# Get your API key from: https://e2b.dev/docs/getting-started/api-key
-E2B_API_KEY=e2b_your_api_key_here
+# Environment variables for Research Agent MCP example
 
-# OpenAI API Key
-# Get your API key from: https://platform.openai.com/settings
-OPENAI_API_KEY=sk-your_openai_api_key_here
+E2B_API_KEY=your_e2b_api_key
+OPENAI_API_KEY=your_openai_api_key
