--- a/examples/mcp-browserbase-js/package.json
+++ b/examples/mcp-browserbase-js/package.json
@@ -25,6 +25,10 @@
     "openai",
     "agents"
   ],
-  "author": "Foundry Labs",
-  "license": "MIT"
+  "license": "MIT",
+  "author": {
+    "name": "FoundryLabs, Inc.",
+    "email": "hello@e2b.dev",
+    "url": "https://e2b.dev"
+  }
 }
