--- a/examples/mcp-groq-exa-js/package.json
+++ b/examples/mcp-groq-exa-js/package.json
@@ -26,6 +26,10 @@
     "notion",
     "research"
   ],
-  "author": "Foundry Labs",
-  "license": "MIT"
+  "license": "MIT",
+  "author": {
+    "name": "FoundryLabs, Inc.",
+    "email": "hello@e2b.dev",
+    "url": "https://e2b.dev"
+  }
 }
