--- a/examples/mcp-custom-server-js/env.template
+++ b/examples/mcp-custom-server-js/env.template
@@ -1,3 +1,3 @@
-# Environment variables for Custom Server MCP example
-
-E2B_API_KEY=your_e2b_api_key
+# E2B API Key
+# Get your API key from: https://e2b.dev/docs/getting-started/api-key
+E2B_API_KEY=e2b_your_api_key_here
