--- a/examples/mcp-custom-template-js/env.template
+++ b/examples/mcp-custom-template-js/env.template
@@ -1,6 +1,15 @@
-# Environment variables for Custom Template MCP example
+# E2B API Key
+# Get your API key from: https://e2b.dev/docs/getting-started/api-key
+E2B_API_KEY=e2b_your_api_key_here
 
-E2B_API_KEY=your_e2b_api_key
-BROWSERBASE_API_KEY=your_browserbase_api_key
-BROWSERBASE_PROJECT_ID=your_browserbase_project_id
-GEMINI_API_KEY=your_gemini_api_key
+# Browserbase API Key
+# Get your API key from: https://browserbase.com/
+BROWSERBASE_API_KEY=bb_your_browserbase_api_key_here
+
+# Gemini API Key
+# Get your API key from: https://ai.google.dev/
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Browserbase Project ID
+# Get your project ID from: https://browserbase.com/
+BROWSERBASE_PROJECT_ID=your_project_id_here
