--- a/examples/mcp-custom-template-js/package.json
+++ b/examples/mcp-custom-template-js/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsx build.ts",
-    "start": "tsx sandbox.ts",
+    "start": "tsx index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["e2b", "mcp", "template", "custom", "browserbase"],
