--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     },
     "devDependencies": {
         "@types/jest": "^29.0.0",
-        "jest": "^29.0.0",
+        "jest": "^29.7.0",
         "ts-jest": "^29.0.0",
         "ts-node": "^10.9.2"
     },
     "dependencies": {
+        "@e2b/code-interpreter": "^2.3.1",
         "dotenv": "^16.4.5",
-        "e2b": "^0.16.2-beta.52",
         "ignore": "^6.0.2"
     }
 }
