--- a/examples/autogen-python/pyproject.toml
+++ b/examples/autogen-python/pyproject.toml
@@ -6,16 +6,15 @@ authors = ["keeganmccallum <keeganmccallum3@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
-pyautogen = "^0.3.0"
-e2b = "0.17.2a60"
-python-dotenv = "^1.0.0"
-
+python = "^3.11"
+ag2 = "^0.10.0"
+e2b = "^2.8.0"
+e2b-code-interpreter = "^2.3.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
 
 [tool.poetry.scripts]
 main = "e2b_autogen.main:main"
