codestral-code-interpreter-python update

--- a/examples/codestral-code-interpreter-python/.gitignore
+++ b/examples/codestral-code-interpreter-python/.gitignore
@@ -1,1 +1,27 @@
+# Environment variables
 .env
+
+# Output files
+output/
+*.png
+*.jpg
+*.pdf
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Poetry
+poetry.lock
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
