--- a/examples/firecrawl-scrape-and-analyze-airbnb-data/package.json
+++ b/examples/firecrawl-scrape-and-analyze-airbnb-data/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "prettier": "3.2.5",
-    "tsx": "^4.7.3",
-    "typescript": "^5.4.5"
+    "@types/node": "^22.13.4",
+    "prettier": "^3.4.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@e2b/code-interpreter": "^1.0.1",
-    "@anthropic-ai/sdk": "^0.28.0",
-    "@mendable/firecrawl-js": "^0.0.21",
+    "@e2b/code-interpreter": "^2.3.1",
+    "@anthropic-ai/sdk": "^0.71.0",
+    "@mendable/firecrawl-js": "^4.8.2",
     "buffer": "^6.0.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^17.2.3",
+    "zod": "^3.24.1"
   }
 }
