feat: Add dotenv support for loading environment variables
Add dotenv configuration in build.template.ts and operate.sandbox.ts to load environment variables from .env files
Update package.json to add dotenv dependency

--- a/examples/tpl-sbx-world-js/package.json
+++ b/examples/tpl-sbx-world-js/package.json
@@ -10,6 +10,7 @@
     "e2b:connect:sandbox": "npx tsx operate.sandbox.ts --connect --shell"
   },
   "dependencies": {
-    "e2b": "^2.7.0"
+    "e2b": "^2.7.0",
+    "dotenv": "^16.4.5"
   }
 }
