--- a/examples/tpl-sbx-world-js/package.json
+++ b/examples/tpl-sbx-world-js/package.json
@@ -9,10 +9,12 @@
     "e2b:resume:sandbox": "npx tsx operate.sandbox.ts --resume",
     "e2b:connect:sandbox": "npx tsx operate.sandbox.ts --connect --shell",
     "e2b:list:template": "npx tsx operate.sandbox.ts --list-templates",
-    "e2b:delete:template": "npx tsx operate.sandbox.ts --delete-template"
+    "e2b:delete:template": "npx tsx operate.sandbox.ts --delete-template",
+    "e2b:run:code": "npx tsx run.code-interpreter.ts"
   },
   "dependencies": {
     "e2b": "^2.7.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "@e2b/code-interpreter": "^2.3.1"
   }
 }
