feat: optimize template parameters

--- a/examples/tpl-sbx-world-py/.env.example
+++ b/examples/tpl-sbx-world-py/.env.example
@@ -3,7 +3,12 @@ E2B_API_KEY=your_api_key_here
 
 # Private deployment configuration (optional)
 # E2B_DOMAIN=your.domain.tld:port
-# E2B_CUSTOM_IP=192.168.123.81  # If custom DNS resolution is needed
+# E2B_CUSTOM_IP=  # If custom DNS mapping is needed
+# NODE_TLS_REJECT_UNAUTHORIZED=0  # Disable TLS certificate verification
 
-# Sandbox timeout duration (minutes, optional)
+# Sandbox configuration (optional)
 # SANDBOX_MINUTES=10
+# SANDBOX_MODE=code  # Sandbox mode: code (Code Interpreter) or base (Base Image)
+
+# Image registry configuration (optional)
+# E2B_IMAGE_REGISTRY=
